[gd_scene load_steps=4 format=3 uid="uid://c0ar3qw6gjl3u"]

[ext_resource type="Script" path="res://music_settings.gd" id="1_ou7is"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amd5w"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.811765)

[sub_resource type="LabelSettings" id="LabelSettings_tymdn"]
font_size = 18

[node name="Music Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.6, 0.6)
script = ExtResource("1_ou7is")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 998.0
offset_bottom = 1207.0

[node name="label Volume" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00167001
anchor_right = 0.143955
anchor_bottom = 0.026512
theme_override_styles/normal = SubResource("StyleBoxFlat_amd5w")
text = "Volume: "
label_settings = SubResource("LabelSettings_tymdn")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Volume-slider" type="HSlider" parent="Panel/label Volume"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.800469
anchor_top = 0.5
anchor_right = 0.800469
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -7.66667
offset_right = 41.0
offset_bottom = 11.3333
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Exit_Settings" type="Control" parent="."]
z_index = 1
anchors_preset = 0
offset_top = 3.0
offset_right = 1002.0
offset_bottom = 1212.0

[node name="Return_home" type="Button" parent="Exit_Settings"]
layout_mode = 0
offset_left = 383.334
offset_top = 728.667
offset_right = 630.334
offset_bottom = 833.667
text = "Back"

[connection signal="pressed" from="Exit_Settings/Return_home" to="." method="_on_return_home_pressed"]
